// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkFlare should render correctly 1`] = `
<RCTBPKFlare
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</RCTBPKFlare>
`;

exports[`iOS BpkFlare should render correctly with arbitrary props 1`] = `
<RCTBPKFlare
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
  testID="123"
>
  <View />
</RCTBPKFlare>
`;

exports[`iOS BpkFlare should render correctly with custom style 1`] = `
<RCTBPKFlare
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</RCTBPKFlare>
`;

exports[`iOS BpkFlare should render correctly with pointerDirection=up 1`] = `
<RCTBPKFlare
  pointerDirection="up"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</RCTBPKFlare>
`;
